# sysrepo-plugin-ietf-system

./: CMakeLists.txt  README.md  system-plugin.c
